--- a/cliente/index.html
+++ b/cliente/index.html
@@ -1,12 +1,52 @@
-<!DOCTYPE html> 
-<html> 
-<head> 
-    <meta charset="utf-8"> <meta name="viewport" content="width=device-width, initial-scale=1"> 
-    <title> Página de Alejandro </title> 
-    <script src="./modelo.js"></script>
-</head> 
+<!DOCTYPE html>
+<html>
+<head>
+       <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Mi página de ejemplo</title>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+        <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 
-<body>  
-    
-</body> 
+        <script src="./cliente/clienteRest.js"></script>
+        <script src="./cliente/controlWeb.js"></script>
+
+</head>
+<body>
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <!-- Brand/logo -->
+        <a class="navbar-brand" href="#">Logo</a>
+
+        <!-- Links -->
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link 1</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link 2</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link 3</a>
+            </li>
+        </ul>
+    </nav>
+
+   <div class="container mt-4">
+            <div class="row">
+                <div class="col-12 text-center my-4">
+                    <h1 class="display-4">Arquitectura base</h1>
+                </div>
+            </div>
+            <div id="au"></div>
+    </div>
+
+       
+    <script>
+            rest=new ClienteRest();
+            cw=new ControlWeb();
+            cw.mostrarAgregarUsuario();
+            cw.mostrarPanelOps();
+    </script>
+</body>
 </html>
