--- a/cliente/index.html
+++ b/cliente/index.html
@@ -8,6 +8,7 @@
         <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js" integrity="sha512-3j3VU6WC5rPQB4Ld1jnLV7Kd5xr+cq9avvhwqzbH/taCRNURoeEpoPBK9pDyeukwSxwRPJ8fDgvYXd6SkaZ2TA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
         <script src="./cliente/clienteRest.js"></script>
         <script src="./cliente/controlWeb.js"></script>
@@ -43,10 +44,11 @@
 
        
     <script>
-            rest=new ClienteRest();
             cw=new ControlWeb();
-            cw.mostrarAgregarUsuario();
+            rest=new ClienteRest(cw);
+            //cw.mostrarAgregarUsuario();
             cw.mostrarPanelOps();
+            cw.comprobarSesion();
     </script>
 </body>
 </html>
