--- a/cliente/index.html
+++ b/cliente/index.html
@@ -3,18 +3,26 @@
 <head>
        <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Mi página de ejemplo</title>
+        <title>Proyecto Alejandro González Cortijo</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
         <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js" integrity="sha512-3j3VU6WC5rPQB4Ld1jnLV7Kd5xr+cq9avvhwqzbH/taCRNURoeEpoPBK9pDyeukwSxwRPJ8fDgvYXd6SkaZ2TA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <script src="https://accounts.google.com/gsi/client" async defer></script>
 
         <script src="./cliente/clienteRest.js"></script>
         <script src="./cliente/controlWeb.js"></script>
 
 </head>
 <body>
+    <div
+        id="g_id_onload"
+        data-client_id="270733010519-a35099usqc22lr9400m7m7pp3ngheseb.apps.googleusercontent.com"
+        data-login_uri="http://localhost:3000/oneTap/callback"
+        data-skip_prompt_cookie="nick"
+    ></div>
+
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <!-- Brand/logo -->
         <a class="navbar-brand" href="#">Logo</a>
@@ -22,13 +30,10 @@
         <!-- Links -->
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="#">Link 1</a>
+                <a class="nav-link" id="navLogin" href="#">Iniciar sesión</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Link 2</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Link 3</a>
+                <a class="nav-link" id="navRegistro" href="#">Registrarse</a>
             </li>
         </ul>
     </nav>
@@ -39,16 +44,25 @@
                     <h1 class="display-4">Arquitectura base</h1>
                 </div>
             </div>
+            <!-- Zona de mensajes -->
+            <div id="msg" class="mb-3"></div>
+            <!-- Zona donde se cargan formularios de login/registro -->
+            <div id="registro" class="mb-3"></div>
             <div id="au"></div>
     </div>
-
        
     <script>
-            cw=new ControlWeb();
-            rest=new ClienteRest(cw);
-            //cw.mostrarAgregarUsuario();
-            cw.mostrarPanelOps();
-            cw.comprobarSesion();
+        cw=new ControlWeb();
+        rest=new ClienteRest(cw);
+        // Inicialización de la interfaz
+        cw.comprobarSesion();
+        if (!$.cookie("nick")){
+            cw.mostrarRegistro();
+        }
+
+        $("#navRegistro").on("click",function(e){e.preventDefault(); cw.mostrarRegistro();});
+        $("#navLogin").on("click",function(e){e.preventDefault(); cw.mostrarLogin();});
+    // No mostrar panel de operaciones; tras iniciar sesión solo debe aparecer el mensaje de bienvenida
     </script>
 </body>
 </html>
