--- a/cliente/login.html
+++ b/cliente/login.html
@@ -1,13 +1,15 @@
 <div id="fmLogin">
     <form>
         <div class="form-group">
-            <label for="emailLogin">Email address:</label>
-            <input type="email" class="form-control" placeholder="Introduce email" id="emailLogin">
+            <label for="email">Dirección email:</label>
+            <input type="email" class="form-control"
+placeholder="Introduce email" id="email">
         </div>
         <div class="form-group">
-            <label for="pwdLogin">Password:</label>
-            <input type="password" class="form-control" placeholder="Introduce contraseña" id="pwdLogin">
-        </div>
-    <button type="button" id="btnLogin" class="btn btn-primary">Iniciar sesión</button>
+            <label for="pwd">Password:</label>
+            <input type="password" class="form-control"
+placeholder="Introduce password" id="pwd">
+    </div>
+    <button type="submit" id="btnLogin" class="btn btn-primary">Iniciar sesión</button>
     </form>
 </div>
