--- a/cliente/index.html
+++ b/cliente/index.html
@@ -9,7 +9,17 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js" integrity="sha512-3j3VU6WC5rPQB4Ld1jnLV7Kd5xr+cq9avvhwqzbH/taCRNURoeEpoPBK9pDyeukwSxwRPJ8fDgvYXd6SkaZ2TA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <script src="https://accounts.google.com/gsi/client" async defer></script>
+                <script src="https://accounts.google.com/gsi/client" async defer></script>
+                <style>
+                    /* Asegurar que la barra de navegación esté por encima del prompt One Tap para permitir clicks */
+                    .navbar { z-index: 2000; position: relative; }
+                    /* Aumentar z-index del área de mensajes y del contenedor del botón Salir
+                       para que queden por encima del prompt One Tap y sean clicables. */
+                    #au { position: relative; z-index: 3000; }
+                    #au #bnv { position: relative; z-index: 4000; }
+                    /* Intentar empujar los contenedores de One Tap más abajo si es posible */
+                    .g_id_onload, .g_id_signin { z-index: 0 !important; }
+                </style>
 
         <script src="./cliente/clienteRest.js"></script>
         <script src="./cliente/controlWeb.js"></script>
@@ -19,7 +29,7 @@
     <div
         id="g_id_onload"
         data-client_id="270733010519-a35099usqc22lr9400m7m7pp3ngheseb.apps.googleusercontent.com"
-        data-login_uri="http://localhost:3000/oneTap/callback"
+        data-login_uri="/oneTap/callback"
         data-skip_prompt_cookie="nick"
     ></div>
     <!-- Optional sign in button (will fallback if One Tap cannot auto prompt) -->
@@ -56,11 +66,9 @@
     <script>
         cw=new ControlWeb();
         rest=new ClienteRest(cw);
-        // Inicialización de la interfaz
+        // Inicialización de la interfaz: preguntar al servidor si hay sesión
+        // (no mostrar el formulario de registro hasta recibir la respuesta)
         cw.comprobarSesion();
-        if (!$.cookie("nick")){
-            cw.mostrarRegistro();
-        }
 
         $("#navRegistro").on("click",function(e){e.preventDefault(); cw.mostrarRegistro();});
         $("#navLogin").on("click",function(e){e.preventDefault(); cw.mostrarLogin();});
