--- a/cliente/index.html
+++ b/cliente/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-       <meta charset="utf-8">
+    <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Proyecto Alejandro González Cortijo</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
@@ -9,7 +9,8 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js" integrity="sha512-3j3VU6WC5rPQB4Ld1jnLV7Kd5xr+cq9avvhwqzbH/taCRNURoeEpoPBK9pDyeukwSxwRPJ8fDgvYXd6SkaZ2TA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-                <script src="https://accounts.google.com/gsi/client" async defer></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.2/socket.io.min.js"></script>
+        <script src="https://accounts.google.com/gsi/client" async defer></script>
                 <style>
                     /* Asegurar que la barra de navegación esté por encima del prompt One Tap para permitir clicks */
                     .navbar { z-index: 2000; position: relative; }
@@ -17,12 +18,16 @@
                        para que queden por encima del prompt One Tap y sean clicables. */
                     #au { position: relative; z-index: 3000; }
                     #au #bnv { position: relative; z-index: 4000; }
+                    /* Asegurar que el modal quede por encima de todo (incluido #au) */
+                    .modal { z-index: 5000 !important; }
+                    .modal-backdrop { z-index: 4500 !important; }
                     /* Intentar empujar los contenedores de One Tap más abajo si es posible */
                     .g_id_onload, .g_id_signin { z-index: 0 !important; }
                 </style>
 
         <script src="./cliente/clienteRest.js"></script>
         <script src="./cliente/controlWeb.js"></script>
+        <script src="./cliente/clienteWS.js"></script>
 
 </head>
 <body>
@@ -62,10 +67,28 @@
             <div id="registro" class="mb-3"></div>
             <div id="au"></div>
     </div>
-       
+    <!-- The Modal -->
+    <div class="modal" id="miModal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <!-- Modal Header -->
+                <div class="modal-header">
+                    <h4 class="modal-title">Atención</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <!-- Modal body -->
+                <div class="modal-body" id="mBody"></div>
+                <!-- Modal footer -->
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">Cerrar</button>
+                </div>
+            </div>
+        </div>
+    </div>       
     <script>
         cw=new ControlWeb();
         rest=new ClienteRest(cw);
+        ws=new ClienteWS();
         // Inicialización de la interfaz: preguntar al servidor si hay sesión
         // (no mostrar el formulario de registro hasta recibir la respuesta)
         cw.comprobarSesion();
